--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
 language = 2
+defaultLanguage=1
