--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rentACarDb
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
-language = 2
+language = 1
 defaultLanguage=1
+
+mainPath=rentACarSpring\\img\\
+defaultImageName=defaultImage.jpg
+defaultImagePath=mainPath+defaultImageName
